# dataset-tools

./: CMakeLists.txt  README.md  main.cpp
3dviewer/: main.cpp
capture/: .CMakeLists.txt.swp  CMakeLists.txt  Grabber.cpp  Grabber.h  main.cpp
doc/: DatasetTool.docx
gui/: gui.cpp  gui.h  main.cpp  wmain.cpp  wmain.h  wmain.ui
gui/pages/: ImageViewerDialog.cpp  ImageViewerDialog.h  captureToolPage.cpp  captureToolPage.h  captureToolPage.ui  imageViewerDialog.cpp  imageViewerDialog.h  labelToolPage.cpp  labelToolPage.h  labelToolPage.ui  mainPage.cpp  mainPage.h  mainPage.ui  selectObjectDialog.cpp  selectObjectDialog.h  substractToolPage.cpp  substractToolPage.h  substractToolPage.ui  wmain.cpp  wmain.h  wmain.ui
py-pngIndexed/: README  applyMask.py  dataset.csv  indexPng.py  indexPngDataset.py  masksPngIndexed.py
substract/: main.cpp
